# orchard-robotics-assessment

./: .gitignore  Architecture.md  Features.md  README.md  fruit_Scope.sql  queries.md  swagger.yaml
client/: .env.local.template  README.md  cloudbuild.yaml  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
client/api/: api.js
client/app/: layout.tsx  page.tsx
client/app/components/: histogram.tsx  intro.tsx  nav.tsx  navbar.tsx  page-contents.tsx
client/app/util/: index.ts
db/: .env.template  Cargo.toml  README.md  scan.sql
db/src/: main.rs
server/: .env.template  Dockerfile  README.md  app.py  cloudbuild.yaml  db_config.py  init_db.py  pyproject.toml  swagger.yml
