[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
postgres = "0.19.7"
postgres-types = "0.2.6"

[build-dependencies]
postgres-types = "0.2.6"
